Added a logo! Still need to include a transparency to it, but the concept is ready.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand section-link" href="#home"><img src="images/logo-pink.png" alt=""/></a>
+                        <a class="navbar-brand section-link" href="#home"><img src="images/logo_fractal_long.png" alt=""/></a>
                     </div>
                     <div class="col-md-12 margin-thirty no-margin-lr sm-no-margin">
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,7 +59,6 @@
                                 <li><a href="#education" class="section-link">Education</a></li>
                                 <li><a href="#employment" class="section-link">Employment</a></li>
                                 <li><a href="#portfolio" class="section-link">Portfolio</a></li>
-                                <li><a href="#teaching" class="section-link">Teaching</a></li>
                                 <li><a href="#contact" class="section-link">Contact</a></li>
                             </ul>
                         </div>
@@ -86,9 +85,9 @@
                             <div class="slider-typography text-left">
                                 <div class="slider-text-middle-main xs-padding-eleven">
                                     <div class="slider-text-middle md-text-center">
-                                        <span class="text-uppercase position-relative title-extra-large alt-font white-text letter-spacing-1">Hello i'm</span>
+                                        <span class="text-uppercase position-relative title-extra-large alt-font white-text letter-spacing-1">Hello I'm</span>
                                         <span class="text-uppercase position-relative title-extra-large-3 alt-font white-text letter-spacing-1 font-weight-700">Aya Eid</span>
-                                        <span class="skills text-uppercase position-relative fast-pink-text-dark bg-black alt-font letter-spacing-2 margin-four no-margin-lr xs-display-none">UX Designer / Frontend Developer</span> 
+                                        <span class="skills text-uppercase position-relative fast-pink-text-dark bg-black alt-font letter-spacing-2 margin-four no-margin-lr xs-display-none">Data Scientist / Image Analyst</span> 
                                     </div>
                                 </div>
                             </div>
@@ -102,7 +101,7 @@
             </section>
             <!-- end intro section -->
             <!-- about section -->
-            <section id="about" class="wow fadeIn cover-background personal-about" style="background-image:url('images/aya_pic_2.jpg');">
+            <section id="about" class="wow fadeIn cover-background personal-about" style="background-image:url('images/aya_pic_2.jpg');padding-top: 50px;">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-4 col-sm-12">
@@ -117,14 +116,14 @@
                                 <li><span>Date of birth:</span>23 February 1986</li>
                                 <li><span>Nationality:</span>United States</li>
                             </ul>
-                            <a href="#" class="btn-black btn btn-medium button margin-fifteen no-margin-lr inner-link no-margin-bottom">Download Resume</a>
+                            <a href="#" class="btn-black btn btn-medium button margin-fifteen no-margin-lr inner-link no-margin-bottom">Download Resume</a><a href="#" class="btn-black btn btn-medium button margin-fifteen no-margin-lr inner-link no-margin-bottom">Download CV</a>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- end about section -->
             <!-- skills section -->
-            <section id="skills" class="wow fadeIn bg-light-gray">
+            <section id="skills" class="wow fadeIn bg-light-gray" style="padding-top: 50px;">
                 <div class="container">
                     <div class="row">
                         <!-- section title -->
@@ -252,7 +251,7 @@
             </section>
             <!-- end counter section -->
             <!-- education section -->
-            <section id="education" class="wow fadeIn cover-background personal-about" style="background-image:url('images/personal-img3.jpg');">
+            <section id="education" class="wow fadeIn cover-background personal-about" style="background-image:url('images/personal-img3.jpg');padding-top: 50px;">
                 <div class="container">
                     <div class="row">
                         <!-- section title -->
@@ -331,7 +330,7 @@
             </section>
             <!-- end education section -->
             <!-- employment section -->
-            <section id="employment" class="wow fadeIn bg-light-gray">
+            <section id="employment" class="wow fadeIn bg-light-gray" style="padding-top: 50px;">
                 <div class="container">
                     <div class="row">
                         <!-- section title -->
@@ -418,7 +417,7 @@
             </section>
             <!-- end awards section -->
             <!-- portfolio section -->
-            <section id="portfolio" class="wow fadeIn work-2col gutter-medium border-bottom">
+            <section id="portfolio" class="wow fadeIn work-2col gutter-medium border-bottom" style="padding-top: 50px;">
                 <div class="container">
                     <div class="row">
                         <!-- section title -->
@@ -1473,95 +1472,9 @@
                 </div>
             </section>
             <!-- end portfolio section -->
-            <!-- blog section -->
-            <section id="teaching" class="wow fadeIn border-bottom">
-                <div class="container">
-                    <div class="row">
-                        <!-- section title -->
-                        <div class="col-md-12 col-sm-12">
-                            <span class="title-sideline text-uppercase title-large alt-font black-text font-weight-700 border-color-fast-pink-dark">Recent Blog</span>
-                        </div>
-                        <!-- end section title -->
-                    </div>
-                    <div class="row">
-                        <div class="margin-eleven no-margin-bottom blog-post blog-post-style5 no-margin-lr">
-                            <!-- blog item -->
-                            <article>
-                                <div class="col-lg-4 col-md-6 col-sm-6 no-padding bg-fast-yellow new-post overflow-hidden">
-                                    <div class="post-details alt-font">
-                                        <span class="text-extra-large font-weight-600 z-index-1 position-relative text-uppercase post-title display-block"><a href="blog-details.html" class="black-text">Good design is<br> obvious. Great design<br> is transparent.</a></span>
-                                        <span class="post-date display-block text-uppercase z-index-1 position-relative font-weight-600">26 July 2015</span>
-                                        <span class="post-name text-small text-uppercase z-index-1 position-relative"><a href="blog.html" class="black-text">Posted by Nathan Ford</a></span>
-                                        <div class="img-border-medium border-transperent-white z-index-0"></div>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- end blog item -->
-                            <!-- blog item -->
-                            <article>
-                                <div class="col-lg-4 col-md-6 col-sm-6 no-padding  overflow-hidden">
-                                    <div class="post-details alt-font">
-                                        <span class="text-extra-large font-weight-600 z-index-1 position-relative text-uppercase post-title display-block"><a href="blog-details.html" class="gray-text">The life of a designer<br> is a life of fight: fight<br> against the ugliness.</a></span>
-                                        <span class="post-date display-block text-uppercase z-index-1 position-relative font-weight-600">26 July 2015</span>
-                                        <span class="post-name text-small text-uppercase z-index-1 position-relative"><a href="blog.html" class="black-text">Posted by Colin Powell</a></span>
-                                        <div class="img-border-medium border-transperent-white z-index-0"></div>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- end blog item -->
-                            <!-- blog item -->
-                            <article>
-                                <div class="col-lg-4 col-md-6 col-sm-6 no-padding overflow-hidden">
-                                    <div class="post-details alt-font">
-                                        <span class="text-extra-large font-weight-600 z-index-1 position-relative text-uppercase post-title display-block"><a href="blog-details.html" class="gray-text">Technology over<br> technique produces<br> emotionless design.</a></span>
-                                        <span class="post-date display-block text-uppercase z-index-1 position-relative font-weight-600">26 July 2015</span>
-                                        <span class="post-name text-small text-uppercase z-index-1 position-relative"><a href="blog.html" class="black-text">Posted by Nathan Ford</a></span>
-                                        <div class="img-border-medium border-transperent-black-light z-index-0"></div>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- end blog item -->
-                            <!-- blog item -->
-                            <article>
-                                <div class="col-lg-4 col-md-6 col-sm-6 no-padding overflow-hidden">
-                                    <div class="post-details alt-font">
-                                        <span class="text-extra-large font-weight-600 z-index-1 position-relative text-uppercase post-title display-block"><a href="blog-details.html" class="gray-text">Bad design is smoke,<br> while good design<br> is a mirror.</a></span>
-                                        <span class="post-date display-block text-uppercase z-index-1 position-relative font-weight-600">25 July 2015</span>
-                                        <span class="post-name text-small text-uppercase z-index-1 position-relative"><a href="blog.html" class="black-text">Posted by Paul Scrivens </a></span>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- end blog item -->
-                            <!-- blog item -->
-                            <article>
-                                <div class="col-lg-4 col-md-6 col-sm-6 no-padding bg-fast-pink-dark popular-post overflow-hidden">
-                                    <div class="post-details alt-font">
-                                        <span class="text-extra-large font-weight-600 z-index-1 position-relative text-uppercase post-title display-block"><a href="blog-details.html" class="white-text">Good design goes to<br> heaven; bad design<br> goes everywhere.</a></span>
-                                        <span class="post-date display-block text-uppercase z-index-1 position-relative font-weight-600 white-text">24 July 2015</span>
-                                        <span class="post-name text-small text-uppercase z-index-1 position-relative"><a href="blog.html" class="white-text">Posted by Nathan Ford</a></span>
-                                        <div class="img-border-medium border-transperent-white z-index-0"></div>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- end blog item -->
-                            <!-- blog item -->
-                            <article>
-                                <div class="col-lg-4 col-md-6 col-sm-6 no-padding overflow-hidden">
-                                    <div class="post-details alt-font">
-                                        <span class="text-extra-large font-weight-600 z-index-1 position-relative text-uppercase post-title display-block"><a href="blog-details.html" class="gray-text">Design is as much an<br> act of spacing as an act<br> of marking.</a></span>
-                                        <span class="post-date display-block text-uppercase z-index-1 position-relative font-weight-600">24 July 2015</span>
-                                        <span class="post-name text-small text-uppercase z-index-1 position-relative"><a href="blog.html" class="black-text">Posted by Paul Scrivens</a></span>
-                                    </div>
-                                </div>
-                            </article>
-                            <!-- end blog item -->
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- end blog section -->
+
             <!-- contact section -->
-            <section id="contact" class="wow fadeIn cover-background personal-about" style="background-image:url('images/personal-img15.jpg');">
+            <section id="contact" class="wow fadeIn cover-background personal-about" style="background-image:url('images/personal-img15.jpg');padding-top: 50px;">
                 <div class="container">
                     <div class="row">
                         <!-- section title -->
@@ -1654,7 +1567,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12 col-sm-12 text-center">
-                                <span class="text-small text-uppercase letter-spacing-1 alt-font">&COPY; 2020 Brando is proudly powered by <a href="http://www.themezaa.com/" target="_blank">ThemeZaa.</a></span>
+                                <span class="text-small text-uppercase letter-spacing-1 alt-font">&COPY; 2015 Brando is proudly powered by <a href="http://www.themezaa.com/" target="_blank">ThemeZaa.</a></span>
                             </div>
                         </div>
                     </div>
@@ -1702,4 +1615,5 @@
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 
+<!-- Mirrored from www.themezaa.com/html/brando/personal.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 14 Oct 2020 22:02:59 GMT -->
 </html>
